# ElegantCAT

./: README.md  pyproject.toml
benchmarks/: README.md  combined63_all_models.json  combined_benchmark.csv  pandeya_bench.csv
src/elegantcat/: __init__.py  cli.py  models.py  paths.py
