[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elegantcat"
version = "0.1.0"
description = "Importable wrappers for ElegantCAT-v2L and ElegantCAT-v2S"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "torch",
  "librosa",
  "soundfile",
  "torchaudio"
]

[project.scripts]
elegantcat = "elegantcat.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
